# PlanetsMultithreading

./: CMakeLists.txt  README.md  main.cpp
include/: planet.h  position_comparison.h
src/: CMakeLists.txt  position_comparison.cpp
